platform_versioned_docs/version-4.2.0/administer/clusters/advanced/cluster-upgrades.mdx
---
title: Agent Upgrades
sidebar_label: Agent Upgrades
---

import Tabs from '@theme/Tabs';
import TabItem from '@theme/TabItem'

import PartialClusterConnectUI from '../../../_partials/cluster/connect-ui.mdx'
import PartialClusterConnectCLI from '../../../_partials/cluster/connect-cli.mdx'

import BeforeSvg from '@site/static/media/agent/before-agent-upgrade.excalidraw.svg';
import DuringSvg1 from '@site/static/media/agent/during-agent-upgrade-1.excalidraw.svg';
import DuringSvg2 from '@site/static/media/agent/during-agent-upgrade-2.excalidraw.svg';
import DuringSvg3 from '@site/static/media/agent/during-agent-upgrade-3.excalidraw.svg';
import AfterSvg from '@site/static/media/agent/after-agent-upgrade.excalidraw.svg';


## Platform-managed Agents

Platform-managed agents automatically receive upgrades controlled by the control plane.
These automatic upgrades also handle more significant agent changes and migrations.
All agents connect using an egress-only connection to the platform.

<BeforeSvg width="100%"/>

### Upgrade process

When the platform initiates an upgrade on an egress-only agent, it will first deploy a proxy-only agent.
As the name suggests, this proxy-only agent solely aims to proxy the communication between the platform and the connected cluster's Kubernetes API server.

The platform deploys the proxy-only agent by creating a deployment in the connected cluster's agent's namespace. It additionally reuses the agent's service account and associated RBAC permissions.
Once the proxy-only agent is healthy, the platform upgrades the agent deployment.
In case of a failure during the upgrade, the platform can still connect via the proxy-only agent and perform a rollback to a previous agent version.

<DuringSvg1 width="100%" />

When the platform starts the agent upgrade, the agent will be unavailable for a brief period until it restarts and reconnects. This proxy-only agent maintains a connection to the connected cluster's Kubernetes apiserver during that upgrade period and serves as a backup connection.

<DuringSvg2 width="100%" />

The proxy-only agent exists for the entire duration of the upgrade process, and the platform uses it to communicate with the connected cluster's Kubernetes API server.
By doing so, the platform ensures that the connected cluster remains operational and can continue to receive updates and perform operations.

<DuringSvg3 width="100%" />

Once the agent upgrade is complete, the platform will remove the proxy-only agent and the associated resources from the connected cluster.

<AfterSvg width="100%" />

## Self-managed Agents

If the platform does not manage your agents, please manually upgrade them by repeating the installation steps using the CLI or helm command.
Instructions on how to do can be found [here](../connect-cluster).

