platform_versioned_docs/version-4.6.0/administer/clusters/advanced/cluster-upgrades.mdx
---
title: Agent Upgrades
sidebar_label: Agent Upgrades
---

import Tabs from '@theme/Tabs';
import TabItem from '@theme/TabItem'

import ConnectPlatform from '../../../_fragments/cli-steps/connect-platform.mdx';
import PartialClusterUpgradeCLI from '../../../_partials/cluster/upgrade-cli.mdx'
import PartialClusterUpgradeHelm from '../../../_partials/cluster/upgrade-helm.mdx'

import BeforeSvg from '@site/static/media/agent/before-agent-upgrade.excalidraw.svg';
import DuringSvg1 from '@site/static/media/agent/during-agent-upgrade-1.excalidraw.svg';
import DuringSvg2 from '@site/static/media/agent/during-agent-upgrade-2.excalidraw.svg';
import DuringSvg3 from '@site/static/media/agent/during-agent-upgrade-3.excalidraw.svg';
import AfterSvg from '@site/static/media/agent/after-agent-upgrade.excalidraw.svg';


## Platform-managed agents

Platform-managed agents automatically receive upgrades controlled by the control plane.
These automatic upgrades also handle more significant agent changes and migrations.
All agents connect using an egress-only connection to the platform.

<BeforeSvg width="100%"/>

### Upgrade process

When the platform initiates an upgrade on an egress-only agent, it will first deploy a proxy-only agent.
As the name suggests, this proxy-only agent solely aims to proxy the communication between the platform and the connected cluster's Kubernetes API server.

The platform deploys the proxy-only agent by creating a deployment in the connected cluster's agent's namespace. It additionally reuses the agent's service account and associated RBAC permissions.
Once the proxy-only agent is healthy, the platform upgrades the agent deployment.
In case of a failure during the upgrade, the platform can still connect via the proxy-only agent and perform a rollback to a previous agent version.

<DuringSvg1 width="100%" />

When the platform starts the agent upgrade, the agent will be unavailable for a brief period until it restarts and reconnects. This proxy-only agent maintains a connection to the connected cluster's Kubernetes apiserver during that upgrade period and serves as a backup connection.

<DuringSvg2 width="100%" />

The proxy-only agent exists for the entire duration of the upgrade process, and the platform uses it to communicate with the connected cluster's Kubernetes API server.
By doing so, the platform ensures that the connected cluster remains operational and can continue to receive updates and perform operations.

<DuringSvg3 width="100%" />

Once the agent upgrade is complete, the platform will remove the proxy-only agent and the associated resources from the connected cluster.

<AfterSvg width="100%" />

## Self-managed agents
If the platform does not manage your agents, you can still manually upgrade them.

<Tabs
  defaultValue="cli"
  values={[
    {label: 'CLI', value: 'cli'},
    {label: 'Helm', value: 'helm'},
  ]}>
  <TabItem value="cli">
    <PartialClusterUpgradeCLI />


  :::info platform login
    <ConnectPlatform />

  If your kubectl context is not set to the cluster with running platform, it's
  possible to login to the platform using the CLI and access key.
  If you haven't already, you need to [create access key](/docs/platform/4.6.0/administer/authentication/access-keys#create-an-access-key) to be able to login to the platform.

  ```bash title="Login to the platform using access key"
  vcluster platform login [platform-url] --access-key [access-key]
  ```

  :::

  </TabItem>
  <TabItem value="helm">
    <PartialClusterUpgradeHelm />
  </TabItem>
</Tabs>